using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class StaticData
{
    public static readonly string DirDiffuse_ON = "DirDiffuse_ON";
    public static readonly string DirSpec_ON = "DirSpec_ON";
    public static readonly string EnvDiffuse_ON = "EnvDiffuse_ON";
    public static readonly string EnvSpec_ON = "EnvSpec_ON";

    public static readonly string Action1 = "Action1";
    public static readonly string Action2 = "Action2";
    public static readonly string Action3 = "Action3";

}
